# ===================================================================
# ym-combopt のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  ${PROJECT_BINARY_DIR}/include
  ${PROJECT_SOURCE_DIR}/ym-common/include
  ${PROJECT_SOURCE_DIR}/ym-base/include
  include
  private_include
  )

# テストデータのパス
set ( TESTDATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/testdata/" )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( c++-srcs )
#if ( Python3_FOUND )
#  add_subdirectory( py_capi )
#  add_subdirectory( pytest )
#endif (Python3_FOUND)


# ===================================================================
#  ソースの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================
