# ===================================================================
# ym-combopt のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( mincov )
add_subdirectory ( matrix )
add_subdirectory ( udgraph )
#add_subdirectory ( coloring )
add_subdirectory ( max_clique )


# ===================================================================
#  ソースの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_combopt
  ${mincov_SOURCES}
  ${matrix_SOURCES}
  ${udgraph_SOURCES}
  ${coloring_SOURCES}
  ${max_clique_SOURCES}
  )
