
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

set ( TESTDATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/testdata/" )

add_subdirectory( gtest )
add_subdirectory( programs )
#if ( Python3_FOUND )
#  add_subdirectory( pytest )
#endif (Python3_FOUND)


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================
