# ===================================================================
# ym-combopt のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

#add_subdirectory ( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( coloring_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/UdGraph_coloring.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ColGraph.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Dsatur.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/IsCov.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Isx.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Isx2.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/TabuCol.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
