# ===================================================================
# ym-combopt のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( matrix_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/McHeadList.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/McColList.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/McRowList.cc
#  ${CMAKE_CURRENT_SOURCE_DIR}/McBlock.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/McMatrix.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
