# ===================================================================
# ym-combopt のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( test-programs )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( max_clique_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/UdGraph_max_clique.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/MclqGreedy.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/MclqExact.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
