
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================

add_executable( max_clique
  max_clique.cc
  $<TARGET_OBJECTS:ym_combopt_obj>
  $<TARGET_OBJECTS:ym_base_obj>
  )

target_link_libraries ( max_clique
  ${YM_LIB_DEPENDS}
  )

add_executable( max_clique_d
  max_clique.cc
  $<TARGET_OBJECTS:ym_combopt_obj_d>
  $<TARGET_OBJECTS:ym_base_obj_d>
  )

target_compile_options ( max_clique_d
  PRIVATE "-g"
  )

target_link_libraries ( max_clique_d
  ${YM_LIB_DEPENDS}
  )
